--- a/css/style.css
+++ b/css/style.css
@@ -304,6 +304,10 @@ color: var(--sec-text-color);
     display: flex;
     align-items: center;
     } 
+
+    .site-navp {
+        margin-bottom: 96px;
+    }
 .studiop{
     background-color: #fff;
     color: var(--main-text-color);
@@ -339,6 +343,13 @@ margin-left: auto;
 gap: 40px;
 }
 
+.buttonline{
+    display: flex;
+    justify-content: center;
+    margin-bottom: 80px;
+    gap: 24px;
+}
+
 .buttonstack {
     color: var(--sec-text-color);
     background-color: var(--port-button-bg);
@@ -348,14 +359,12 @@ font-size: 16px;
 padding: 8px 16px;
 line-height: 1.5;
 /* identical to box height, or 150% */
-justify-content: center;
 align-items: center;
 text-align: center;
 letter-spacing: 0.04em;
 box-sizing: border-box;
 border: 1px solid #E7E9FC;
 border-radius: 4px;
-display: flex;
 align-items: center;
 text-align: center;
 }
@@ -364,10 +373,25 @@ text-align: center;
     margin-right: 80px;
 }
 
-
 .buttonstack:hover {
-    color: #ffffff;
+    color: #F4F4FD;
+    background-color: #4D5AE5;
+}
+
+
+
+    .images {
+        display: flex;
+        flex-wrap: wrap;
+margin: 0;
+padding: 0;
+gap: 48px 24px;
     }
+
+.imagesbasis{
+    flex-basis: auto;
+}
+
 .images.name {
     color: var(--main-text-color);
     background-color: #fff;
