--- a/css/style.css
+++ b/css/style.css
@@ -44,9 +44,6 @@ a:link {
 color: #434455;
 }
 
-
-
-
     .site-nav, .buttons, .address {
         display: flex;
         align-items: center;
@@ -334,17 +331,16 @@ color: var(--sec-text-color);
 .site-navp, .buttonsp, .addressp{
     display: flex;
     align-items: center;
+    text-align: center;
     } 
 
 .containertop {
-    border-bottom: 1px solid var(--text-text-color);
+    border-bottom: 1px solid #E7E9FC;
+    align-items: center;
+    text-align: center;
+    margin-bottom: 96px;
 }
 
-    .site-navp {
-padding-top: 24px;
-padding-bottom: 24px;
-
-    }
 
 .studiop{
     background-color: #fff;
@@ -425,10 +421,14 @@ text-align: center;
         flex-wrap: wrap;
 margin: 0;
 padding: 0;
-gap: 48px 21px;
+gap: 48px 24px;
     }
 
-
+.imagesbasis.img{
+    display:block;
+    max-width: 100%;
+    height: auto;
+}
 
 .name {
     color: var(--main-text-color);
@@ -473,15 +473,8 @@ mix-blend-mode: normal;
     padding-bottom: 32px;
 padding-left: 16px;
 padding-right: 16px;
-border-left: 16px;
-background-repeat: 54px;
-
+border: 1px solid #E7E9FC;
 }
-
-.imagesbasis{
-border: 1px solid;
-}
-
 
 .footlogop{
     color: var(--cloud-text-color);
@@ -501,16 +494,16 @@ border: 1px solid;
     background-color: var(--main-text-color);
     padding-top: 100px;
     padding-bottom: 100px;
-    padding-left: 156px;
-    padding-right: 1020px;
+
 }
 
 
-.footlogo.webp {
+.colorfooterlogo {
 color: var(--sec-text-color);
 background-color: #2E2F42;
 
 }
+
 
 .foottextp {
     font-family: 'Roboto';
