--- a/css/style.css
+++ b/css/style.css
@@ -174,6 +174,7 @@ line-height: 1.2;
 /* identical to box height, or 120% */
 letter-spacing: 0.02em;
 margin-bottom: 8px;
+margin-top: 0;
 }
 .minortext{
     background-color: #fff;
@@ -226,6 +227,7 @@ letter-spacing: 0.02em;
 text-transform: capitalize;
 text-align: center;
 margin-top: 0;
+margin-bottom: 72px;
 }
 
 .name {
@@ -238,6 +240,7 @@ line-height: 1.2;
 text-align: center;
 letter-spacing: 0.02em;
 margin-top: 0;
+margin-bottom: 8px;
 }
 .job {
     color: var(--text-text-color);
@@ -269,19 +272,14 @@ border: 1px solid #E7E9FC;
 
 .containerfoot{
     background-color: var(--main-text-color);
-    width: 1158px;
     padding-left: 15px;
     padding-right: 15px;
-    margin-left: auto;
-    margin-right: auto;
     padding-top: 100px;
     padding-bottom: 100px;
 }
 
 
-.colorfoot{
-    background-color: var(--main-text-color);
-}
+
 .footlogo {    
 
 margin-top: 0;
