--- a/css/style.css
+++ b/css/style.css
@@ -139,7 +139,7 @@ margin-top: 4px;
     padding-top: 192px;
 padding-bottom: 192px;
     text-align: center;
-background-color: var(--main-text-color)
+background-color: var(--main-text-color);
 }
 
 
