--- a/css/style.css
+++ b/css/style.css
@@ -6,7 +6,8 @@ html {
 
 
 
-*:hover,:focus{
+*:hover,
+*:focus{
 
     transition: color 2500ms cubic-bezier(0.4, 0, 0.2, 1),
                 background-color 250ms cubic-bezier(0.4, 0, 0.2, 1),
@@ -86,6 +87,10 @@ color: #434455;
     }
     
 
+
+    .site-nav:hover{
+        color: #2E2F42;
+    }
 .containertop {
     padding-top: 24px;
     padding-bottom: 24px;
@@ -335,6 +340,9 @@ display: flex;
 text-align: center;
 gap: 24px;
 
+transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1),
+background-color 250ms cubic-bezier(0.4, 0, 0.2, 1),
+box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1);
 /*Я змінив ширину цієї секції тому що інакше не влазило*/
 }
 
@@ -389,7 +397,9 @@ border: 1px solid #E7E9FC;
 
 .social-icon-link:hover, :focus{
     background-color: #404BBF;
-
+    transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1),
+            background-color 250ms cubic-bezier(0.4, 0, 0.2, 1),
+            box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .social-icon-color{
@@ -557,8 +567,12 @@ text-align: center;
 margin: 0;
 padding: 0;
 gap: 48px 24px;
-    }
+transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1),
+background-color 250ms cubic-bezier(0.4, 0, 0.2, 1),
+box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
 
+    
 
 
 .imagesbasis.img{
@@ -663,5 +677,8 @@ height: 72px;
 
 .logo-bottom{
     margin-right: 120px;
+    transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1),
+    background-color 250ms cubic-bezier(0.4, 0, 0.2, 1),
+    box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
