--- a/css/style.css
+++ b/css/style.css
@@ -53,7 +53,7 @@ html {
 .containertop {
     padding-top: 24px;
     padding-bottom: 24px;
-
+    box-shadow:  0px 2px 1px rgba(46, 47, 66, 0.08), 0px 1px 1px rgba(46, 47, 66, 0.16), 0px 1px 6px rgba(46, 47, 66, 0.08);
 }
 
 body{
@@ -77,7 +77,7 @@ ul {
 
 a:link  { 
     text-decoration: none; 
-color: #434455;
+color: #404bbf
 }
 
     .site-nav, .button-list, .address {
@@ -86,8 +86,10 @@ color: #434455;
     flex-direction: row;
     }
     
+    .site-nav, .button-list, .address{
 
-
+        transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+    }
 
 .containertop {
     padding-top: 24px;
@@ -147,9 +149,9 @@ color: #434455;
     width: 100%;
     height: 4px;
     border-radius: 2px;
-    background-color: #4D5AE5;
+    background-color: #404bbf;
     position: absolute;
-    border-bottom: -2px;
+    border-bottom: -1px;
 }
 
 .address {
