--- a/css/style.css
+++ b/css/style.css
@@ -682,3 +682,20 @@ height: 72px;
     box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
+.p-bottom{
+    color: aliceblue;
+    font-weight: 500;
+    line-height: 1.5;
+    letter-spacing: 0.02em;
+    margin-bottom: 16px;
+}
+
+
+.p-social{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    gap: 16px;
+    
+    margin-top: 8px;
+}
