--- a/css/style.css
+++ b/css/style.css
@@ -151,7 +151,7 @@ color: #404bbf
     border-radius: 2px;
     background-color: #404bbf;
     position: absolute;
-    border-bottom: -1px;
+    border-bottom: -px;
 }
 
 .address {
