--- a/css/style.css
+++ b/css/style.css
@@ -198,8 +198,13 @@ margin-top: 4px;
     padding-top: 192px;
     padding-bottom: 192px;
     text-align: center;
-    background-image: linear-gradient(rgba(46, 47, 66, 0.7) , rgba(46, 47, 66, 0.7)),
-    url(../images/people-office\ 1.png)
+    background-image: linear-gradient(rgba(46, 47, 66, 0.7), rgba(46, 47, 66, 0.7)),
+    url(../images/people-office\ 1.png);
+    max-width: 1440px;
+    background-repeat: no-repeat; 
+    background-position: center;
+    background-size: cover;
+    transition:background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 
