--- a/css/style.css
+++ b/css/style.css
@@ -343,7 +343,6 @@ padding-bottom: 120px;
 }
 .cloudtext{
     color: var(--main-text-color);
-    background-color: var(--cloud-text-color);
     font-weight: 600;
 font-size: 36px;
 line-height: 1.1;
@@ -404,6 +403,7 @@ box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1);
 
 .our-portfolio{
     margin-top: 120px;
+    margin-bottom:120px;
 }
 
 
@@ -622,7 +622,6 @@ box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1);
 
 .namep {
     color: var(--main-text-color);
-    background-color: #fff;
     font-weight: 600;
     font-size: 20px;
 line-height: 1.2;
@@ -631,7 +630,6 @@ margin-bottom: 8px;
 }
 .description {
     color: var(--text-text-color);
-    background-color: #fff;
 font-size: 16px;
 line-height: 1.5;
 /* identical to box height, or 150% */
@@ -720,7 +718,7 @@ height: 72px;
 }
 
 .p-bottom{
-    color: #;
+    color: #fff;
     font-weight: 500;
     line-height: 1.5;
     letter-spacing: 0.02em;
