--- a/css/style.css
+++ b/css/style.css
@@ -82,6 +82,7 @@ ul {
 a:link  { 
     text-decoration: none; 
     color: #404bbf;
+    transition color 250ms cubic-bezier(0.4, 0, 0.2, 1) ;
 }
 
     .site-nav, .button-list, .address {
