--- a/css/style.css
+++ b/css/style.css
@@ -79,19 +79,19 @@ ul {
     margin: 0; 
 }
 
-a:link  { 
+.logo, .web, .button {
     text-decoration: none; 
-    color: #404bbf;
-    transition color 250ms cubic-bezier(0.4, 0, 0.2, 1) ;
 }
 
     .site-nav, .button-list, .address {
     display: flex;
     align-items: center;
     flex-direction: row;
+    text-decoration: none; 
     }
     
     .addresslink{
+        
         background-color: #fff;
         color: var(--text-text-color);
     font-size: 16px;
@@ -99,6 +99,7 @@ a:link  {
     /* identical to box height, or 150% */
     letter-spacing: 0.02em;
         transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+        text-decoration: none; 
     }
 
     .address, .addresslink{
