--- a/css/style.css
+++ b/css/style.css
@@ -225,6 +225,7 @@ transition: background-color 250ms cubic-bezier (0.165, 0.84, 0.44, 1);
     border-radius: 4px;
     background: var(--OCEAN, #404BBF);
     box-shadow: 0px 4px 4px 0px rgba(0, 0, 0, 0.15);
+    transition:background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 
@@ -233,7 +234,7 @@ transition: background-color 250ms cubic-bezier (0.165, 0.84, 0.44, 1);
     padding-bottom: 192px;
     text-align: center;
     background-image: linear-gradient(rgba(46, 47, 66, 0.7), rgba(46, 47, 66, 0.7)),
-    url(../images/people-office1.png);
+    url(/images/people-office1.png);
     max-width: 1440px;
     background-repeat: no-repeat; 
     background-position: center;
