--- a/css/style.css
+++ b/css/style.css
@@ -216,7 +216,7 @@ border-radius: 4px;
 padding: 16px 32px;
 min-width: 170px;
 margin-top: 4px;
-transition: background-color 250ms cubic-bezier (0.165, 0.84, 0.44, 1);
+transition: background-color 250ms cubic-bezier(0.165, 0.84, 0.44, 1);
 
 }
 
@@ -234,7 +234,7 @@ transition: background-color 250ms cubic-bezier (0.165, 0.84, 0.44, 1);
     padding-bottom: 192px;
     text-align: center;
     background-image: linear-gradient(rgba(46, 47, 66, 0.7), rgba(46, 47, 66, 0.7)),
-    url(/images/people-office1.png);
+    url(../images/people-office1.png);
     max-width: 1440px;
     background-repeat: no-repeat; 
     background-position: center;
@@ -445,7 +445,7 @@ box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1);
 
 .social-icon-link:hover, :focus{
     background-color: #404BBF;
-    transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1),
+    transition:color 250ms cubic-bezier(0.4, 0, 0.2, 1),
             background-color 250ms cubic-bezier(0.4, 0, 0.2, 1),
             box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
@@ -736,4 +736,31 @@ height: 72px;
     gap: 16px;
     
     margin-top: 8px;
+}
+
+
+.social-icon-link-foot{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+
+    width: 100%;
+    height: 100%;
+
+    color: #F4F4FD;
+
+    background-color: #4D5AE5;
+    border-radius: 50%;
+    transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1),
+            
+
+}
+
+
+
+.social-icon-link-foot:hover, :focus{
+    background-color: #31d0aa; 
+    transition:color 250ms cubic-bezier(0.4, 0, 0.2, 1),
+            background-color 250ms cubic-bezier(0.4, 0, 0.2, 1),
+            box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
