--- a/css/style.css
+++ b/css/style.css
@@ -454,7 +454,7 @@ box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1);
     
 }
 
-.social-icon-link:hover, :focus{
+.social-icon-link:hover{
     background-color: #404BBF;
     transition:color 250ms cubic-bezier(0.4, 0, 0.2, 1),
             background-color 250ms cubic-bezier(0.4, 0, 0.2, 1),
@@ -650,9 +650,6 @@ line-height: 1.5;
 letter-spacing: 0.02em;
 margin-top: 0;
 margin-bottom: 0;
-top: 0;
-font-size: 16px;
-line-height: 1.5; 
 }
 .images.text {
     color: var(--cloud-text-color);
