--- a/css/style.css
+++ b/css/style.css
@@ -6,15 +6,6 @@ html {
 
 
 
-*:hover,
-*:focus{
-
-    transition: color 2500ms cubic-bezier(0.4, 0, 0.2, 1),
-                background-color 250ms cubic-bezier(0.4, 0, 0.2, 1),
-                box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1);
-}
-
-
 
 *,
 *::before,
@@ -225,9 +216,7 @@ transition: background-color 250ms cubic-bezier(0.165, 0.84, 0.44, 1);
     border-radius: 4px;
     background: var(--OCEAN, #404BBF);
     box-shadow: 0px 4px 4px 0px rgba(0, 0, 0, 0.15);
-    transition:background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
-
 
 .effectivesection {
     padding-top: 192px;
@@ -239,7 +228,7 @@ transition: background-color 250ms cubic-bezier(0.165, 0.84, 0.44, 1);
     background-repeat: no-repeat; 
     background-position: center;
     background-size: cover;
-    transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1),
+    transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 
@@ -385,9 +374,7 @@ display: flex;
 text-align: center;
 gap: 24px;
 
-transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1),
-background-color 250ms cubic-bezier(0.4, 0, 0.2, 1),
-box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1);
+transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 /*Я змінив ширину цієї секції тому що інакше не влазило*/
 }
 
@@ -456,9 +443,7 @@ box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1);
 
 .social-icon-link:hover{
     background-color: #404BBF;
-    transition:color 250ms cubic-bezier(0.4, 0, 0.2, 1),
-            background-color 250ms cubic-bezier(0.4, 0, 0.2, 1),
-            box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1);
+    transition:color 250ms cubic-bezier(0.4, 0, 0.2, 1) ;
 }
 
 .social-icon-color{
@@ -618,10 +603,8 @@ text-align: center;
 margin: 0;
 padding: 0;
 gap: 48px 24px;
-transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1),
-background-color 250ms cubic-bezier(0.4, 0, 0.2, 1),
-box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1);
-}
+transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+    }
 
     
 
@@ -718,9 +701,7 @@ height: 72px;
 
 .logo-bottom{
     margin-right: 120px;
-    transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1),
-    background-color 250ms cubic-bezier(0.4, 0, 0.2, 1),
-    box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1);
+    transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .p-bottom{
@@ -754,7 +735,7 @@ height: 72px;
 
     background-color: #4D5AE5;
     border-radius: 50%;
-    transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1),
+    transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
             
 
 }
@@ -763,7 +744,4 @@ height: 72px;
 
 .social-icon-link-foot:hover, :focus{
     background-color: #31d0aa; 
-    transition:color 250ms cubic-bezier(0.4, 0, 0.2, 1),
-            background-color 250ms cubic-bezier(0.4, 0, 0.2, 1),
-            box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
