--- a/css/style.css
+++ b/css/style.css
@@ -400,11 +400,41 @@ transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 .imagesbasis {
     position: relative;
     transition: box-shadow 0.3s ease;
+    transition: box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .imagesbasis:hover {
     box-shadow:  0px 1px 6px rgba(46, 47, 66, 0.08), 0px 1px 1px rgba(46, 47, 66, 0.16), 0px 2px 1px rgba(46, 47, 66, 0.08);
-    transform: translateY(0%)
+    
+}
+
+
+.description {
+    color: #F4F4FD;
+font-size: 16px;
+line-height: 1.5;
+/* identical to box height, or 150% */
+letter-spacing: 0.02em;
+margin-top: 0;
+margin-bottom: 0;
+transform: translateY(0%);
+padding: 40px 32px; 
+background-color: #4d5ae5;
+height: 100%;
+width: 100%;
+transform: translateY(100%);
+transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1); 
+}
+
+
+.container-portfolio {
+    width: 1158px;
+    padding-left: 15px;
+    padding-right: 15px;
+    margin-left: auto;
+    margin-right: auto;
+    position: relative;
+    overflow: hidden;
 }
 
 
