--- a/css/style.css
+++ b/css/style.css
@@ -223,7 +223,7 @@ transition: background-color 250ms cubic-bezier(0.165, 0.84, 0.44, 1);
     padding-bottom: 192px;
     text-align: center;
     background-image: linear-gradient(rgba(46, 47, 66, 0.7), rgba(46, 47, 66, 0.7)),
-    url(../images/people-office1.png);
+    url(./images/people-office1.png);
     max-width: 1440px;
     background-repeat: no-repeat; 
     background-position: center;
@@ -466,7 +466,7 @@ transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
 
     background-color: #4D5AE5;
     border-radius: 50%;
-    transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1),
+    transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
             
     
 }
