--- a/css/style.css
+++ b/css/style.css
@@ -48,7 +48,7 @@ html {
     
 
     box-shadow:  0px 2px 1px rgba(46, 47, 66, 0.08), 0px 1px 1px rgba(46, 47, 66, 0.16), 0px 1px 6px rgba(46, 47, 66, 0.08);
-    
+    transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 body{
@@ -207,7 +207,7 @@ border-radius: 4px;
 padding: 16px 32px;
 min-width: 170px;
 margin-top: 4px;
-transition: background-color 250ms cubic-bezier(0.165, 0.84, 0.44, 1);
+transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 
 }
 
