--- a/css/style.css
+++ b/css/style.css
@@ -48,7 +48,7 @@ html {
     
 
     box-shadow:  0px 2px 1px rgba(46, 47, 66, 0.08), 0px 1px 1px rgba(46, 47, 66, 0.16), 0px 1px 6px rgba(46, 47, 66, 0.08);
-    transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+    
 }
 
 body{
@@ -207,7 +207,7 @@ border-radius: 4px;
 padding: 16px 32px;
 min-width: 170px;
 margin-top: 4px;
-transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+transition: background-color 250ms - cubic-bezier(0.4, 0, 0.2, 1);
 
 }
 
@@ -397,26 +397,15 @@ transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 
-
-
-.imagesbasis.img{
-    display:block;
-    max-width: 100%;
-    height: auto;
-}
-
-
-
 .imagesbasis {
     position: relative;
     transition: box-shadow 0.3s ease;
     transition: box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1);
-    
 }
 
 .imagesbasis:hover {
     box-shadow:  0px 1px 6px rgba(46, 47, 66, 0.08), 0px 1px 1px rgba(46, 47, 66, 0.16), 0px 2px 1px rgba(46, 47, 66, 0.08);
-    transform: translateY(0%);
+    
 }
 
 
@@ -650,6 +639,14 @@ transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
     
 
 
+.imagesbasis.img{
+    display:block;
+    max-width: 100%;
+    height: auto;
+}
+
+
+
 .namep {
     color: var(--main-text-color);
     font-weight: 600;
@@ -692,7 +689,6 @@ mix-blend-mode: normal;
 padding-left: 16px;
 padding-right: 16px;
 border: 1px solid #E7E9FC;
-position: relative;
 }
 
 .footlogop{
