--- a/css/style.css
+++ b/css/style.css
@@ -79,6 +79,8 @@ ul {
     align-items: center;
     flex-direction: row;
     text-decoration: none; 
+    color: #404bbf;
+    transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
     }
     
     .addresslink{
