--- a/css/style.css
+++ b/css/style.css
@@ -478,6 +478,11 @@ transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
     transition:color 250ms cubic-bezier(0.4, 0, 0.2, 1) ;
 }
 
+
+.social-icon-link:focus{
+
+    transition:color 250ms cubic-bezier(0.4, 0, 0.2, 1) ;
+}
 .social-icon-color{
     fill: #F4F4FD;
 }
