--- a/css/style.css
+++ b/css/style.css
@@ -419,14 +419,101 @@ line-height: 1.5;
 letter-spacing: 0.02em;
 margin-top: 0;
 margin-bottom: 0;
-transform: translateY(0%);
 padding: 40px 32px; 
 background-color: #4d5ae5;
 height: 100%;
 width: 100%;
-transform: translateY(100%);
 transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1); 
 }
+
+
+
+
+.portfolio-list {
+    padding-top: 120px;
+    padding-bottom: 120px;
+    }
+    .portfolio-list-title {
+    color: #2E2F42;
+        text-align: center;
+        font-size: 36px;
+        font-weight: 700;
+        line-height: 1.11;
+        letter-spacing: 0.72px;
+        text-transform: capitalize;
+        margin-bottom: 72px;
+    }
+    .portfolio-list .list {
+        display: flex;
+        flex-wrap: wrap;
+        gap: 24px;
+        column-gap: 24px;
+        row-gap: 48px;
+    }
+    .portfolio-item {
+        width: calc((100% - 48px) / 3);
+        transition-property: box-shadow;
+            transition-duration: 250ms;
+            transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
+    }
+    .overlay {
+        position: absolute;
+        top: 0;
+        color: #F4F4FD;
+            font-size: 16px;
+            font-weight: 400;
+            line-height: 1.5px;
+            letter-spacing: 0.02em;
+            padding: 40px 32px;
+            background-color: #4D5AE5;
+            width: 100%;
+            height: 100%;
+            transform: translateY(100%);
+            transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
+    }
+    .image-box {
+        width: 360px;
+        height: 300px;
+        position: relative;
+        overflow: hidden;
+    }
+    .portfolio-item:hover .overlay {
+        transform: translateY(0);
+    }
+    .portfolio-item:hover {
+        box-shadow: 0px 2px 1px 0px rgba(46, 47, 66, 0.08), 0px 1px 1px 0px rgba(46, 47, 66, 0.16), 0px 1px 6px 0px rgba(46, 47, 66, 0.08);
+    }
+    .overlay {
+        color: #F4F4FD;
+        font-size: 16px;
+        font-weight: 400;
+        line-height: 24px;
+        letter-spacing: 1.33;
+        transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
+    }
+    .portfolio-list .name {
+        padding: 32px 16px;
+        border: 1px solid #e7e9fc;
+        border-top: none;
+    }
+    .portfolio-list .list-title {
+        color: #2E2F42;
+            font-size: 20px;
+            font-weight: 500;
+            line-height: 24px;
+            letter-spacing: 0.4px;
+            margin-bottom: 8px;
+    }
+    .portfolio-list .list-text {
+        color: #434455;
+            font-size: 16px;
+            font-weight: 400;
+            line-height: 24px;
+            letter-spacing: 0.32px;
+    }
+    
+
+
 
 
 .container-portfolio {
@@ -478,11 +565,6 @@ transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
     transition:color 250ms cubic-bezier(0.4, 0, 0.2, 1) ;
 }
 
-
-.social-icon-link:focus{
-
-    transition:color 250ms cubic-bezier(0.4, 0, 0.2, 1) ;
-}
 .social-icon-color{
     fill: #F4F4FD;
 }
