--- a/css/style.css
+++ b/css/style.css
@@ -156,6 +156,7 @@ ul {
     line-height: 1.5;
     /* identical to box height, or 150% */
     letter-spacing: 0.02em;
+    color: #404bbf; 
 }
 
 
@@ -209,7 +210,7 @@ border-radius: 4px;
 padding: 16px 32px;
 min-width: 170px;
 margin-top: 4px;
-transition: background-color 250ms - cubic-bezier(0.4, 0, 0.2, 1);
+transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 
 }
 
@@ -563,6 +564,10 @@ transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
 .social-icon-link:hover{
     background-color: #404BBF;
     transition:color 250ms cubic-bezier(0.4, 0, 0.2, 1) ;
+}
+
+.social-icon-link:focus{
+    background-color: #404bbf;
 }
 
 .social-icon-color{
