--- a/css/style.css
+++ b/css/style.css
@@ -114,6 +114,9 @@ ul {
         transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
     }
 
+    .button{
+        transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+    }
 
 .logo{
     font-family: 'Raleway';
