--- a/css/style.css
+++ b/css/style.css
@@ -426,7 +426,7 @@ color: #2E2F42;
 
 .footer .container {
     display: flex;
-    align-items: baseline;
+    align-items: center;
 }
 .footer {
     padding-bottom: 100px;
@@ -487,10 +487,84 @@ margin-bottom: 16px;
 .footer .icon {
     fill: #f4f4fd;
 }
+
+.footer-wraper{
+    margin-left: auto;
+}
+
+.wrapper-caption{
+    color: var(--WHITE, #FFF);
+
+
+font-weight: 500;
+line-height: 24px; /* 150% */
+letter-spacing: 0.32px;
+margin-bottom: 16px;
+}
+
+
+.subscribe-form{
+display: flex;
+align-items: center;
+gap: 24px;
+
+}
+
+
+.subscribe-form-field{
+
+}
+
+
+.subscribe-form-input{
+    width: 264px;
+    height: 40px;
+    padding: 8px 16px;
+    color: var(--WHITE, #FFF);
+    font-size: 12px;
+    line-height: 24px; /* 200% */
+    letter-spacing: 0.48px;
+    outline: transparent;
+    background-color: transparent;
+    border-radius: 4px;
+    border: 1px solid var(--WHITE, #FFF);
+    box-shadow: 0px 4px 4px 0px rgba(0, 0, 0, 0.15);
+}
+
+.subsribe-form-input::placeholder{
+    color: #FFFFFF
+}
+
+.subscribe-form-btn{
+    display: flex;
+    align-items: center;
+    gap: 16px;
+    padding: 8px 24px;
+    color: var(--WHITE, #FFF);
+    text-align: center;
+    font-weight: 500;
+    line-height: 24px; /* 150% */
+    letter-spacing: 0.64px;
+    border-radius: 4px;
+    background: var(--IRIS, #4D5AE5);
+}
+
+
+
+
+.subscribe-form-icon{}
+
+/* Modal window */
+
 .backdrop{
     position: fixed;
     top: 0;
     left: 0;
+
+    display: flex;
+    align-items: center;
+    justify-content: center;
+
     width: 100vw;
     height: 100vh;
     background-color: rgba(46, 47, 66, 0.4);
@@ -508,4 +582,206 @@ margin-bottom: 16px;
     opacity: 1;
     visibility: visible;
     pointer-events: initial;
+}
+
+.modal{
+    position: relative;
+    width: 408px;
+    min-height: 584px;
+    padding: 24px;
+    padding-top: 72px;
+    flex-shrink: 0;
+    border-radius: 4px;
+    background: var(--DAIRY, #FCFCFC);
+    box-shadow: 0px 1px 1px 0px rgba(0, 0, 0, 0.14), 0px 1px 3px 0px rgba(0, 0, 0, 0.12), 0px 2px 1px 0px rgba(0, 0, 0, 0.20);
+}
+
+
+
+.modal-btn {
+    position: absolute;
+    top: 16px; 
+    right: 16px; 
+    width: 24px; 
+    height: 24px; 
+    border-radius: 50%; 
+    background-color: #E7E9FC; 
+    border: none; 
+    cursor: pointer; 
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+.modal-btn-icon {
+    fill: #2E2F42;
+    width: 8px; 
+    height: 8px; /* Задаем размер иконки */
+}
+
+.modal-caption{
+    color: var(--NAVY-BLUE, #2E2F42);
+    text-align: center;
+    margin-top: 72px;
+    margin-bottom: 16px;
+    /* Body Medium */
+    font-family: Roboto;
+    font-size: 16px;
+    font-style: normal;
+    font-weight: 500;
+    line-height: 24px; /* 150% */
+    letter-spacing: 0.32px;
+}
+
+
+.form-wrapper{
+    margin-bottom: 8px;
+}
+
+.form-label {
+    display: block;
+    margin-bottom: 8px;
+    color: var(--LIGHT-SLATE, #8E8F99);
+    font-size: 12px;
+    letter-spacing: -0.02em;
+}
+
+.form-field {
+    position: relative;
+}
+
+.form-input {
+    width: calc(100% - 30px); /* Учитываем ширину иконки */
+    height: 58px;
+    
+    border-radius: 13px;
+    border: 1.5px solid rgba(17, 17, 17, 0.05);
+    box-shadow: 0px 5.445px 5.445px 0px rgba(0, 0, 0, 0.03);
+    padding-left: 38px; /* Отступ слева для текста */
+    outline: none;
+    transition: border-color 300ms ease-in;
+}
+
+.form-input:focus{
+    border-color: #404BBF;
+
+}
+
+
+.form-icon {
+    position: absolute;
+    top: 50%;
+    transform: translateY(-50%);
+    left: 16px;
+    fill: transparent;
+    fill: #2E2F42;
+    transition: stroke 300ms ease-in;
+}
+
+
+.form-input:focus + .form-icon {
+    fill: #404BBF;
+}
+
+
+
+.form-message{
+    width: calc(100% - 30px);
+    resize: none;
+    padding: 8px 16px;
+    border-radius: 4px;
+    border: 1px solid var(--NAVY-BLUE-modal, rgba(46, 47, 66, 0.40));
+
+    line-height: 14px; /* 116.667% */
+    letter-spacing: 0.48px;
+
+    outline: transparent;
+
+    transition: border-color 300ms ease-in;
+}
+
+
+.form-message::placeholder{
+    color: var(--NAVY-BLUE-modal, rgba(46, 47, 66, 0.40));
+}
+
+.form-message:focus{
+    border-color: #404BBF;
+}
+
+
+
+.form-agreement{
+    display: block;
+    margin-bottom: 24px;
+    color: var(--LIGHT-SLATE, #8E8F99);
+    font-size: 14px;
+    line-height: 14px; /* 116.667% */
+    letter-spacing: -0.02em;
+    color: var(--LIGHT-SLATE, #8E8F99);
+    user-select: none;
+}
+
+
+
+.checkbox{
+
+}
+
+
+
+.form-agreement-checkbox{
+    display: inline-flex;
+    align-items: center;
+    justify-content: center;
+    width: 16px;
+    height: 16px;
+    stroke-width: 1px;
+    stroke: var(--NAVY-BLUE-modal, rgba(46, 47, 66, 0.40));
+    transition: border-color 300ms ease, background-color 300ms ease;
+    cursor: pointer;
+    margin-right: 8px;
+}
+
+
+
+.checkbox:checked + .form-agreement-checkbox{
+    background-color: #404BBF;
+    border-color:  #404BBF;
+}
+
+.form-agreement-icon{
+    opacity: 0;
+    transform: scale(0.3);
+    transition: opacity 300ms cubic-bezier(0.8, 0, 0, 1.8) 150ms, transform 300ms cubic-bezier(0.8, 0, 0, 1.8) 150ms;
+}
+
+
+.checkbox:checked + .form-agreement-checkbox > .form-agreement-icon{
+opacity: 1;
+transform: scale(1);
+}
+
+.form-agreement-link{
+    color: var(--IRIS, #4D5AE5);
+
+    line-height: 16px;
+    letter-spacing: 0.48px;
+    text-decoration-line: underline;
+}
+
+.form-btn{
+
+    min-width: 169px;
+    min-height: 56px;
+    padding: 16px 32px;
+    border-radius: 4px;
+    background-color: var(--IRIS, #4D5AE5);
+    box-shadow: 0px 4px 4px 0px rgba(0, 0, 0, 0.15);
+    color: var(--WHITE, #FFF);
+    text-align: center;
+    font-size: 16px;
+    font-weight: 500;
+    
+
 }
