--- a/css/style.css
+++ b/css/style.css
@@ -590,7 +590,6 @@ gap: 24px;
     min-height: 584px;
     padding: 24px;
     padding-top: 72px;
-    flex-shrink: 0;
     border-radius: 4px;
     background: var(--DAIRY, #FCFCFC);
     box-shadow: 0px 1px 1px 0px rgba(0, 0, 0, 0.14), 0px 1px 3px 0px rgba(0, 0, 0, 0.12), 0px 2px 1px 0px rgba(0, 0, 0, 0.20);
@@ -698,6 +697,7 @@ gap: 24px;
     outline: transparent;
 
     transition: border-color 300ms ease-in;
+    margin-bottom: 16px;
 }
 
 
@@ -712,6 +712,7 @@ gap: 24px;
 
 
 .form-agreement{
+    
     display: block;
     margin-bottom: 24px;
     color: var(--LIGHT-SLATE, #8E8F99);
@@ -782,6 +783,8 @@ transform: scale(1);
     text-align: center;
     font-size: 16px;
     font-weight: 500;
-    
+    margin-left:  120px;
+    margin-right: 120px;
 
 }
+
