--- a/css/style.css
+++ b/css/style.css
@@ -569,8 +569,7 @@ gap: 24px;
     height: 100vh;
     background-color: rgba(46, 47, 66, 0.4);
 
-    transition: opacity 300ms ease-in, visibility 300ms ease-in;
-
+    transition: opacity 250ms cubic-bezier(0.4, 0, 0.2, 1), visibility 250ms cubic-bezier(0.4, 0, 0.2, 1); 
     opacity: 0;
     visibility: hidden;
     pointer-events: none;
@@ -585,13 +584,17 @@ gap: 24px;
 }
 
 .modal{
-    position: relative;
+    position: absolute;
+    top: 50%;
+    left: 50%;
     width: 408px;
     min-height: 584px;
     padding: 24px;
     padding-top: 72px;
     border-radius: 4px;
     background: var(--DAIRY, #FCFCFC);
+    transform: translate(-50%, -50%) scale(1);
+    transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
     box-shadow: 0px 1px 1px 0px rgba(0, 0, 0, 0.14), 0px 1px 3px 0px rgba(0, 0, 0, 0.12), 0px 2px 1px 0px rgba(0, 0, 0, 0.20);
 }
 
@@ -599,8 +602,8 @@ gap: 24px;
 
 .modal-btn {
     position: absolute;
-    top: 16px; 
-    right: 16px; 
+    top: 24px; 
+    right: 24px; 
     width: 24px; 
     height: 24px; 
     border-radius: 50%; 
@@ -610,7 +613,16 @@ gap: 24px;
     display: flex;
     justify-content: center;
     align-items: center;
+    border: 1px solid rgba(0, 0, 0, 0.1);
+    padding: 0;
+    transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1), border 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
+
+
+.modal-btn:hover, .modal-btn:focus{
+    background-color: #404bbf;
+}
+
 
 .modal-btn-icon {
     fill: #2E2F42;
