--- a/css/style.css
+++ b/css/style.css
@@ -628,6 +628,7 @@ gap: 24px;
 
 .modal-btn:hover, .modal-btn:focus{
     background-color: #404bbf;
+    border: none; 
 }
 
 
@@ -636,6 +637,8 @@ gap: 24px;
     width: 8px; 
     height: 8px; /* Задаем размер иконки */
 }
+
+
 
 .modal-caption{
     color: var(--NAVY-BLUE, #2E2F42);
@@ -693,7 +696,7 @@ gap: 24px;
     left: 16px;
     fill: transparent;
     fill: #2E2F42;
-    transition: stroke 300ms ease-in;
+    transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1); 
 }
 
 
@@ -804,4 +807,8 @@ transform: scale(1);
     font-weight: 500;
     
 
+}
+
+.form-btn:hover .form-btn:focus {
+    fill: #ffffff
 }
