--- a/css/style.css
+++ b/css/style.css
@@ -718,7 +718,7 @@ gap: 24px;
 
     outline: transparent;
 
-    transition: border-color 300ms ease-in;
+    transition: border-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
     margin-bottom: 16px;
 }
 
@@ -728,7 +728,7 @@ gap: 24px;
 }
 
 .form-message:focus{
-    border-color: #404BBF;
+    border-color: #4D5AE5;
 }
 
 
