--- a/css/style.css
+++ b/css/style.css
@@ -673,19 +673,20 @@ gap: 24px;
 }
 
 .form-input {
-    width: calc(100% - 30px); /* Учитываем ширину иконки */
-    height: 58px;
+    width: 100%; 
+    height: 40px;
     
-    border-radius: 13px;
-    border: 1.5px solid rgba(17, 17, 17, 0.05);
+    border-radius: 4px; 
+    border: 1px solid rgba(46, 47, 66, 0.4); 
     box-shadow: 0px 5.445px 5.445px 0px rgba(0, 0, 0, 0.03);
     padding-left: 38px; /* Отступ слева для текста */
-    outline: none;
-    transition: border-color 300ms ease-in;
+    outline: transparent;
+    transition: border-color 250ms cubic-bezier(0.4, 0, 0.2, 1); 
+    background-color: transparent; 
 }
 
 .form-input:focus{
-    border-color: #404BBF;
+    border-color: #4D5AE5; 
 
 }
 
