--- a/css/style.css
+++ b/css/style.css
@@ -709,14 +709,17 @@ gap: 24px;
 
 
 .form-message{
-    width: calc(100% - 30px);
+    width: 100%;
+    height: 120px;
     resize: none;
+    font-size: 12px;
+    line-height: 1.17;
     padding: 8px 16px;
     border-radius: 4px;
+    color: rgba(46, 47, 66, 0.4);
     border: 1px solid var(--NAVY-BLUE-modal, rgba(46, 47, 66, 0.40));
-
-    line-height: 14px; /* 116.667% */
-    letter-spacing: 0.48px;
+    background-color: transparent; 
+    letter-spacing: 0.04em;
 
     outline: transparent;
 
@@ -807,8 +810,12 @@ transform: scale(1);
     text-align: center;
     font-size: 16px;
     font-weight: 500;
-    
-
+    display: block;
+    line-height: 1.5;
+    letter-spacing: 0.04em;
+    cursor: pointer;
+    border: none; 
+    transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .form-btn:hover .form-btn:focus {
