--- a/css/style.css
+++ b/css/style.css
@@ -622,7 +622,16 @@ gap: 24px;
     align-items: center;
     border: 1px solid rgba(0, 0, 0, 0.1);
     padding: 0;
-    transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1), border 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+
+
+
+.modal-btn-icon {
+    fill: #2E2F42;
+    width: 8px; 
+    height: 8px; /* Задаем размер иконки */
+    transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 
@@ -631,13 +640,9 @@ gap: 24px;
     border: none; 
 }
 
-
-.modal-btn-icon {
-    fill: #2E2F42;
-    width: 8px; 
-    height: 8px; /* Задаем размер иконки */
+.modal-btn-icon:hover, .modal-btn-icon:focus{
+    fill: #ffffff
 }
-
 
 
 .modal-caption{
@@ -656,7 +661,7 @@ gap: 24px;
 
 
 .form-wrapper{
-    margin-bottom: 8px;
+    margin-bottom: 16px;
 }
 
 .form-label {
