--- a/css/style.css
+++ b/css/style.css
@@ -780,15 +780,18 @@ gap: 24px;
     height: 16px;
     stroke-width: 1px;
     stroke: var(--NAVY-BLUE-modal, rgba(46, 47, 66, 0.40));
-    transition: border-color 300ms ease, background-color 300ms ease;
+    transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1), border 250ms cubic-bezier(0.4, 0, 0.2, 1), fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
     cursor: pointer;
+    border: 1px solid rgba(46, 47, 66, 0.4);
+    border-radius: 2px;
+    fill: transparent; 
     margin-right: 8px;
 }
 
 
 
 .checkbox:checked + .form-agreement-checkbox{
-    background-color: #404BBF;
+    background-color: #404bbf; 
     border-color:  #404BBF;
 }
 
