--- a/css/style.css
+++ b/css/style.css
@@ -771,13 +771,7 @@ gap: 24px;
 
 
 
-.form-agreement-label {
-    display: flex;
-    align-items: center;
-    cursor: pointer;
-  }
-  
-  .form-agreement-checkbox {
+.form-agreement-checkbox{
     display: inline-flex;
     align-items: center;
     justify-content: center;
@@ -785,38 +779,41 @@ gap: 24px;
     height: 16px;
     stroke-width: 1px;
     stroke: var(--NAVY-BLUE-modal, rgba(46, 47, 66, 0.40));
-    transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1),
-      border 250ms cubic-bezier(0.4, 0, 0.2, 1),
-      fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
+    transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1), border 250ms cubic-bezier(0.4, 0, 0.2, 1), fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
+    cursor: pointer;
     border: 1px solid rgba(46, 47, 66, 0.4);
     border-radius: 2px;
-    fill: transparent;
+    fill: transparent; 
     margin-right: 8px;
-  }
-  
-  .checkbox:checked + .form-agreement-label .form-agreement-checkbox {
-    background-color: #404bbf;
-    border-color: #404bbf;
-  }
-  
-  .checkbox:checked + .form-agreement-label .form-agreement-icon {
-    opacity: 1;
-    transform: scale(1);
-  }
-  
-  .form-agreement-icon {
+}
+
+
+
+.checkbox:checked + .form-agreement-checkbox{
+    background-color: #404bbf; 
+    border-color:  #404BBF;
+}
+
+.form-agreement-icon{
     opacity: 0;
     transform: scale(0.3);
-    transition: opacity 300ms cubic-bezier(0.8, 0, 0, 1.8) 150ms,
-      transform 300ms cubic-bezier(0.8, 0, 0, 1.8) 150ms;
-  }
-  
-  .checkbox:checked + .form-agreement-label .form-agreement-link {
-    color: var(--IRIS, #4d5ae5);
+    transition: opacity 300ms cubic-bezier(0.8, 0, 0, 1.8) 150ms, transform 300ms cubic-bezier(0.8, 0, 0, 1.8) 150ms;
+}
+
+
+.checkbox:checked + .form-agreement-checkbox > .form-agreement-icon{
+opacity: 1;
+transform: scale(1);
+}
+
+.form-agreement-link{
+    color: var(--IRIS, #4D5AE5);
+
     line-height: 16px;
     letter-spacing: 0.48px;
     text-decoration-line: underline;
-  }
+}
+
 .form-btn{
 
     min-width: 169px;
